NEWS/ChangeLog for itertools
----------------------------

0.1-3	2013-4-XX
    o	added "mode" argument to ichunk function

0.1-2	2012-6-20
    o	added irecord and ireplay functions for recording and
	replaying iterables
    o	added iter.connection method

0.1-1   2010-1-14
    o	added ichunk function to aid in manual chunking
    o	added utility functions written by Hadley Wickham
    o	added "isplit" functions for iterating over data structures
    o	added timeout function for creating iterator timeouts
    o	added ireadBin function for iterating over binary connections
    o	made irep much more like the rep function, and added new irepeat
	to be like the old irep function

0.1	2009-12-29
    o	project created on r-forge