@@ -3,6 +3,8 @@ NEWS/ChangeLog for itertools
 
 0.1-3	2013-4-XX
     o	added "mode" argument to ichunk function
+    o	added ireaddf function for reading data frames from files
+    o	added writedf.combiner function for writing data frames to files
 
 0.1-2	2012-6-20
     o	added irecord and ireplay functions for recording and
